WIP connect page

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "src/swisstronik-components"]
 	path = src/swisstronik-components
-	url = https://github.com/SigmaGmbH/swisstronik-components.git
+	url = https://github.com/SigmaGmbH/swisstronik-js-components.git
+	branch = master
