--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    name: Run
+    name: Run SDI build & deploy
     runs-on: ubuntu-latest
     permissions: write-all
     environment: production
