--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
       - name: Checkout repository and submodules
         uses: actions/checkout@v3
+        with:
+            token: ${{ secrets.ACTION_SUBMODULE }}
+            submodules: 'recursive'
 
       - name: 'Extend memory'
         run: |
