--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Deploy landing to Github Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
+            personal_token: ${{ secrets.GITHUB_TOKEN }}
             publish_branch: gh-pages
             publish_dir: dist
             cname: sdi-demo.swisstronik.com
